2012-06-04  Dirk Pranke  <dpranke@chromium.org>

        test-webkitpy is hanging under cygwin
        https://bugs.webkit.org/show_bug.cgi?id=88269

        Reviewed by Ryosuke Niwa.

        The 'multiprocessing' module doesn't work correctly under Cygwin yet,
        so we need to skip any tests that use it.

        * Scripts/webkitpy/common/system/executive.py:
        (Executive.run_in_parallel):
        * Scripts/webkitpy/common/system/executive_unittest.py:
        (ExecutiveTest.test_run_in_parallel):

2012-06-04  Dirk Pranke  <dpranke@chromium.org>

        test-webkitpy is failing on win32 after r115054
        https://bugs.webkit.org/show_bug.cgi?id=88264

        Reviewed by Ryosuke Niwa.

        The failing http_server test was improperly suppressed (the
        tuple was missing a comma, and so wasn't a tuple at all, just a
        string) and so we were skipping *all* tests on win32. The right
        way to skip a single test is to disable it inside the test
        itself.

        * Scripts/webkitpy/layout_tests/servers/http_server_unittest.py:
        (TestHttpServer.test_start_cmd):
        * Scripts/webkitpy/test/test_finder.py:
        (TestFinder._default_names):
        * Scripts/webkitpy/test/main.py:
        (Tester.run): Add error message if we don't find any tests to run.
        * Scripts/webkitpy/test/main_unittest.py:
            

2012-06-04  Sudarsana Nagineni  <sudarsana.nagineni@linux.intel.com>

        [GTK] Memory leaks in AccessibilityUIElementGtk.cpp
        https://bugs.webkit.org/show_bug.cgi?id=88215

        Reviewed by Martin Robinson.

        Fixed memory leaks in AccessibilityUIElement by using GOwnPtr
        for newly allocated strings.

        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (attributeSetToString):
        (AccessibilityUIElement::allAttributes):

2012-06-04  Sudarsana Nagineni  <sudarsana.nagineni@linux.intel.com>

        [GTK] Memory leaks in DumpRenderTree.cpp