@@ -1,5 +1,15 @@
 2012-06-04  Dirk Pranke  <dpranke@chromium.org>
 
+        webkitpy.layout_tests.port.server_process_unittest.TestServerProcess.test_basic is flaky
+        https://bugs.webkit.org/show_bug.cgi?id=88280
+
+        Unreviewed, build fix.
+
+        * Scripts/webkitpy/layout_tests/port/server_process_unittest.py:
+        (TestServerProcess.test_basic):
+
+2012-06-04  Dirk Pranke  <dpranke@chromium.org>
+
         test-webkitpy is hanging under cygwin
         https://bugs.webkit.org/show_bug.cgi?id=88269
 
